--- a/AppNoticias/View/Base.lproj/Main.storyboard
+++ b/AppNoticias/View/Base.lproj/Main.storyboard
@@ -26,12 +26,18 @@
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2 Men Convicted of Killing Malcolm X Will Be Exonerated After Decades" lineBreakMode="tailTruncation" numberOfLines="6" baselineAdjustment="alignBaselines" minimumFontSize="6" translatesAutoresizingMaskIntoConstraints="NO" id="kWz-93-ddD">
                                             <rect key="frame" x="10" y="5" width="355" height="36"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="36" id="a98-Rd-kfb"/>
+                                            </constraints>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7DS-bW-NQP">
                                             <rect key="frame" x="10" y="48" width="355" height="218"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="218" id="JPw-Gb-7Bc"/>
+                                            </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="By Ashley Southall and Jonah E. Bromwich" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" minimumFontSize="8" translatesAutoresizingMaskIntoConstraints="NO" id="khi-Vv-DWY">
                                             <rect key="frame" x="10" y="276" width="355" height="18"/>
